refactor de componentes de servidor y de base de datos, agregados tests basicos